--- a/src/components/Header/HeaderButtons/styles.css
+++ b/src/components/Header/HeaderButtons/styles.css
@@ -9,5 +9,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: darkgray;
+  background-color: rgb(250, 248, 248);
 }
