--- a/src/components/TodoList/styles.css
+++ b/src/components/TodoList/styles.css
@@ -1,6 +1,6 @@
 .todoListContainer {
-   width: 700px;
-   height: 400px;
+   width: 800px;
+   height: 510px;
    border: 1px solid black;
    border-radius: 17px;
    margin-top: 50px;
@@ -27,10 +27,11 @@
    display: flex;
    flex-direction: column;
    align-items: center;
-   width: 600px;
-   height: 300px;
+   width: 710px;
+   height: 400px;
    border: 1px solid black;
    border-radius: 17px;
    margin-top: 15px;
+   overflow: scroll;
 
 }
