--- a/src/components/TodoList/TodoTabs/styles.css
+++ b/src/components/TodoList/TodoTabs/styles.css
@@ -1,8 +1,8 @@
 .todoTabs {
    display: flex;
    align-items: center;
-   justify-content: space-between;
-   width: 600px;
+   justify-content: space-around;
+   width: 280px;
    height: 27px;
    border: 1px solid black;
    border-radius: 17px;
