Refactor `TodoItem` styles

--- a/src/components/TodoList/TodoItem/styles.css
+++ b/src/components/TodoList/TodoItem/styles.css
@@ -1,9 +1,18 @@
 .todoItem {
    display: flex;
    align-items: center;
-   width: 550px;
-   height: 30px;
+   width: 630px;
+   height: 45px;
    border: 1px solid black;
-   border-radius: 17px;
+   border-radius: 27px;
    margin-top: 10px;
+   justify-content: space-between;
+   padding: 15px;
+   box-sizing: border-box;
+}
+
+.todoItemButtons {
+   display: flex;
+   width: 55px;
+   justify-content: space-between;
 }
