Refactor `HeaderButtons` styles

--- a/src/components/Header/HeaderButtons/styles.css
+++ b/src/components/Header/HeaderButtons/styles.css
@@ -9,5 +9,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(250, 248, 248);
+  margin-left: 20px;
 }
