--- a/src/components/TodoList/TodoItem/styles.css
+++ b/src/components/TodoList/TodoItem/styles.css
@@ -2,13 +2,19 @@
    display: flex;
    align-items: center;
    width: 630px;
-   height: 45px;
+   height: 100px;
    border: 1px solid black;
    border-radius: 27px;
    margin-top: 10px;
    justify-content: space-between;
    padding: 15px;
    box-sizing: border-box;
+}
+
+.textBlock {
+   width: 450px;
+   height: 50px;
+   margin-top: 10px
 }
 
 .todoItemButtons {
@@ -19,4 +25,12 @@
 
 .readyTextBlock {
    text-decoration: line-through;
+}
+
+.changeTextBlock {
+   width: 450px;
+   height: 50px;
+   border: 1px solid black;
+   border-radius: 27px;
+   margin-top: 10px
 }
