--- a/src/components/TodoList/styles.css
+++ b/src/components/TodoList/styles.css
@@ -1,22 +1,6 @@
 .todoListContainer {
-   width: 800px;
-   height: 510px;
-   border: 1px solid black;
-   border-radius: 17px;
-   margin-top: 50px;
-   margin-left: 60px;
-
-}
-
-.todoListTitle {
-   display: flex;
-   justify-content: center;
-   font-size: 19px;
-   font-weight: 200;
-   margin-top: 5px;
-}
-
-.todoListBlock {
+   width: 100%;
+   height: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
@@ -25,13 +9,13 @@
 
 .todoItemsBlock {
    display: flex;
-   flex-direction: column;
+   justify-content: space-around;
+   flex-wrap: wrap;
    align-items: center;
-   width: 710px;
-   height: 400px;
-   border: 1px solid black;
-   border-radius: 17px;
-   margin-top: 15px;
+   width: 100%;
+   height: 600px;
    overflow: scroll;
-
+   box-sizing: border-box;
+   padding-bottom: 10px;
+   margin-top: 20px;
 }
