--- a/src/components/TodoList/TodoItem/styles.css
+++ b/src/components/TodoList/TodoItem/styles.css
@@ -1,20 +1,24 @@
 .todoItem {
-   display: flex;
-   align-items: center;
-   width: 630px;
-   height: 100px;
+   width: 500px;
+   height: 150px;
    border: 1px solid black;
    border-radius: 27px;
-   margin-top: 10px;
-   justify-content: space-between;
+   margin-bottom: 25px;
    padding: 15px;
    box-sizing: border-box;
+   background-color: rgb(247, 249, 249);
+}
+
+.todoItemHeader {
+   display: flex;
+   justify-content: space-between;
 }
 
 .textBlock {
-   width: 450px;
-   height: 50px;
-   margin-top: 10px
+   width: 470px;
+   height: 77px;
+   margin-top: 10px;
+   overflow: scroll;
 }
 
 .todoItemButtons {
@@ -24,13 +28,14 @@
 }
 
 .readyTextBlock {
+   width: 470px;
+   height: 77px;
+   margin-top: 10px;
+   overflow: scroll;
    text-decoration: line-through;
 }
 
-.changeTextBlock {
-   width: 450px;
-   height: 50px;
-   border: 1px solid black;
-   border-radius: 27px;
-   margin-top: 10px
+.todoTitle {
+   width: 350px;
+   font-weight: bold;
 }
