--- a/src/components/TodoList/TodoTabs/styles.css
+++ b/src/components/TodoList/TodoTabs/styles.css
@@ -4,12 +4,10 @@
    justify-content: space-around;
    width: 280px;
    height: 27px;
-   border: 1px solid black;
-   border-radius: 17px;
 }
 
 .todoTab {
-
    border: 1px solid black;
    border-radius: 17px;
+   padding: 7px;
 }
