--- a/src/components/TodoList/TodoForm/styles.css
+++ b/src/components/TodoList/TodoForm/styles.css
@@ -1,9 +1,8 @@
 .addTodoBlockContainer {
    display: flex;
-   /* margin-top: 10px; */
    flex-direction: column;
    width: 450px;
-   height: 125px;
+   height: 130px;
    justify-content: space-between;
 }
 
@@ -12,15 +11,15 @@
    width: 250px;
    height: 22px;
    outline: none;
-   border: 1px solid transparent;
+   border: 1px solid rgb(218, 215, 215);
    border-radius: 12px;
-
 }
 
 .addBlockText {
    width: 430px;
    height: 65px;
-   border: 1px solid transparent;
+   outline: none;
+   border: 1px solid rgb(218, 215, 215);
    border-radius: 16px;
 }
 
