--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 50px;
-  border-bottom: 1px solid black;
+  background-color: #f0f0f9;
   display: flex;
   align-items: center;
   justify-content: center;
