--- a/src/components/TodoList/styles.css
+++ b/src/components/TodoList/styles.css
@@ -1,6 +1,7 @@
 .todoListContainer {
    width: 100%;
    height: 100%;
+   background-color: #f0f0f9;
    display: flex;
    align-items: center;
    flex-direction: column;
@@ -17,5 +18,4 @@
    overflow: scroll;
    box-sizing: border-box;
    padding-bottom: 10px;
-   margin-top: 20px;
 }
